<resources>
    <string name="app_name">"SmartLock"</string>
    <string name="app_versionName">1.0.1</string>
    <!--登录注册-->
    <string name="login_text">登 录</string>
    <string name="signup_text">注 册</string>
    <string name="logintext">登录</string>
    <string name="signuptext">注册</string>
    <string name="pw_text">密 码</string>
    <string name="pw_hint_text">请输入8位数字</string>
    <string name="phone_text">手机号</string>
    <string name="sign_code_text">验证码</string>
    <string name="or_text">or</string>
    <string name="forgetPassWord_text">忘记密码？</string>
    <string name="signup_tip">点击注册即代表你已同意《智能锁具协议》</string>
    <!--设备列表-->
    <string name="add_divice_text">添加设备</string>
    <!--创建租户密码-->
    <string name="tenant_phone_text">租户手机</string>
    <string name="open_door_pw_text">开门密码</string>
    <string name="confirm_password_text">确认密码</string>
    <string name="input_the_rent_text">输入租金</string>
    <string name="hezu_text">合租</string>
    <string name="tip_hezu_text">注:勾选合租将同时显示多名租户缴费信息</string>
    <string name="safe_text">房客安全模式</string>
    <string name="tip_safe_text">注:开启房客安全模式，房主密码将失效</string>
    <string name="day_text">日月租</string>
    <string name="hour_text">小时租</string>
    <string name="confirm_text">同意锁具使用协议</string>
    <string name="confirm_bind_text">验证绑定</string>
    <string name="tv_time_text">请选择时间！</string>
    <!--选择钥匙类型-->
    <string name="zhys_text">租户钥匙</string>
    <string name="lsys_text">临时钥匙</string>
    <string name="rz_text">入住</string>
    <string name="lk_text">离开</string>
    <string name="ok_text">确定</string>
    <string name="cancel_text">取消</string>
    <!--亲情号-->
    <string name="family_text">亲情号</string>
    <string name="family_hint_text">在此填入您要绑定的亲情号</string>
    <string name="family_tip_text">注:在手机丢失情况下可使用亲情号发送取得重置房主手机号的权限，亲情号每月只能变更一次。</string>
    <string name="submit_text">提交</string>
    <!--个人中心-->
    <string name="empty_text">未填写</string>
    <string name="help_text">帮助与反馈</string>
    <string name="change_pw_text">修改登录密码</string>
    <string name="check_version_text">检查新版本</string>
    <string name="exit_text">退出</string>
    <string name="test_name_text">杨小妮</string>
    <string name="test_phone_text">13509786544</string>
    <!--门锁提醒-->
    <string name="time_tip_text">设置报警铃持续时间</string>
    <string name="error_alarm_text">错误三次报警设置</string>
    <string name="test_time_text">五分钟</string>
    <string name="pw_setting_text">密码设置</string>
    <string name="no_update_text">一个月未更新</string>
    <!--商家详情列表-->
    <string name="com_text">家庭别墅保洁</string>
    <string name="com_name_text">中恒(天津)清洗服务有限公司</string>
    <string name="com_name_tag_text">放心企业</string>
    <!--添加密码指纹-->
    <string name="add_pw_text">添加密码/指纹</string>
    <string name="choose_type_text">选择开锁组合</string>
    <string name="only_pw_text">仅密码</string>
    <string name="only_fg_text">仅指纹</string>
    <string name="pw_fg_text">密码+指纹（推荐）</string>
    <!--引导页-->
    <string name="jump_text">跳过 ></string>
    <string name="enter_main_text">开始体验</string>
    <!--设置中心-->
    <string name="pw_finger_setting_text">密码/指纹设置</string>
    <string name="yjgl_setting_text">智能锁移交管理设置</string>
    <!--发送锁具密匙-->
    <string name="send_pw_text">锁具密匙：</string>
    <string name="input_pw_text">请输入8位数字</string>
    <string name="send_pw_tip_text">注：此数字为锁具最高级密匙，为了您的锁具安全，不得传播给他人。</string>
    <string name="sure_text">确 认</string>
    <string name="confirm_tip_text">同意锁具使用协议</string>
    <!--空页面-->
    <string name="no_data">暂时没有数据</string>
    <string name="load_error">加载失败，请查看网络!</string>

    <string name="notifyTitle">提示</string>
    <string name="gpsNotifyMsg">当前手机扫描蓝牙需要打开定位功能。</string>
    <string name="setting">前往设置</string>
    <string name="cancel">取消</string>

    <string name="start_scan">开始扫描</string>
    <string name="stop_scan">停止扫描</string>
    <string name="expand_search_settings">展开搜索设置</string>
    <string name="retrieve_search_settings">收起搜索设置</string>
    <string name="connect_fail">连接失败</string>
    <string name="active_disconnected">蓝牙连接断开了</string>
    <string name="disconnected">连接断开</string>
    <string name="please_open_blue">请先打开蓝牙</string>
    <string name="select_operation_type">选择操作类型</string>
    <string name="characteristic">特性</string>
    <string name="data_changed">的数据变化：</string>
    <string name="read">读</string>
    <string name="write">写</string>
    <string name="open_notification">打开通知</string>
    <string name="close_notification">关闭通知</string>
    <string name="service_list">服务列表</string>
    <string name="characteristic_list">特征列表</string>
    <string name="console">操作控制台</string>
    <string name="name">设备广播名：</string>
    <string name="mac">MAC:</string>
    <string name="service">服务</string>
    <string name="type">服务类型(主服务)</string>
    <string name="scan_setting">在下面你可以配置需要扫描的设备的条件，可以为空</string>
    <string name="setting_name">输入蓝牙设备广播名，多个之间以英文逗号隔开</string>
    <string name="setting_mac">输入蓝牙设备mac地址</string>
    <string name="setting_uuid">输入蓝牙设备UUID，多个之间以英文逗号隔开</string>
    <string name="input_hex">请输入HEX格式指令</string>
    <string name="connect">连接</string>
    <string name="connected">已连接</string>
    <string name="disconnect">断开连接</string>
    <string name="enter">进入操作</string>
    <string name="name_text">昵称</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_activity_add_home">AddHome</string>

</resources>
