<?xml version="1.0" encoding="utf-8"?>
<com.zhy.autolayout.AutoLinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/person_center_bg">

    <com.qmuiteam.qmui.widget.QMUITopBar
        android:id="@+id/title_bar"
        style="@style/topBar" />

    <com.zhy.autolayout.AutoRelativeLayout style="@style/PasswordSetting_bg">

        <com.pkmmte.view.CircularImageView
            android:id="@id/iv_head"
            style="@style/PasswordSetting_headicon"
            android:src="@mipmap/tx_girl" />

        <TextView
            android:id="@id/tv_name"
            style="@style/PasswordSetting_tv_name"
            android:text="@string/test_name_text" />

        <TextView
            android:id="@id/tv_phone"
            style="@style/PasswordSetting_tv_phone"
            android:text="@string/test_phone_text" />

    </com.zhy.autolayout.AutoRelativeLayout>

    <include layout="@layout/line_item" />

    <com.zhy.autolayout.AutoLinearLayout
        android:layout_width="match_parent"
        android:layout_height="530px"
        android:background="@color/white"
        android:orientation="vertical">

        <TextView
            style="@style/PasswordSetting_tip"
            android:text="@string/choose_type_text" />

        <RadioGroup
            android:id="@+id/btn_rg"
            style="@style/PasswordSetting_rg_bg">

            <RadioButton
                android:id="@+id/cb_only_pw"
                style="@style/PasswordSetting_rb_pw"
                android:text="@string/only_pw_text" />

            <RadioButton
                android:id="@+id/cb_only_finger"
                style="@style/PasswordSetting_fr"
                android:text="@string/only_fg_text" />

            <RadioButton
                android:id="@+id/rb_default"
                style="@style/PasswordSetting_pw_fg"
                android:text="@string/pw_fg_text" />
        </RadioGroup>

        <com.qmuiteam.qmui.widget.roundwidget.QMUIRoundButton
            android:id="@id/btn_add"
            style="@style/round_btn"
            android:text="@string/ok_text"
            app:qmui_borderColor="@color/color_green"
            app:qmui_backgroundColor="@color/color_green" />

    </com.zhy.autolayout.AutoLinearLayout>
</com.zhy.autolayout.AutoLinearLayout>