<?xml version="1.0" encoding="utf-8"?>
<com.zhy.autolayout.AutoLinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/CreateKeyPassword_bg">
    <com.qmuiteam.qmui.widget.QMUITopBar
        android:id="@id/top_bar"
        style="@style/topBar"/>

    <com.zhy.autolayout.AutoLinearLayout style="@style/SendPasswordActivity_head_bg">
        <com.zhy.autolayout.AutoLinearLayout style="@style/SendPasswordActivity_body_bg">

            <TextView
                android:text="@string/send_pw_text"
                style="@style/SendPasswordActivity_tv" />
            
            <EditText
                android:id="@id/et_pw"
                style="@style/SendPasswordActivity_et"
                android:hint="@string/input_pw_text" />
        </com.zhy.autolayout.AutoLinearLayout>

        <TextView
            android:text="@string/send_pw_tip_text"
            style="@style/SendPasswordActivity_tip" />
    </com.zhy.autolayout.AutoLinearLayout>

    <com.qmuiteam.qmui.widget.roundwidget.QMUIRoundButton
        android:id="@id/btn_sure"
        style="@style/sure_btn"
        android:text="@string/sure_text"
        app:qmui_borderColor="#506739"
        android:elevation="10px"
        app:qmui_backgroundColor="#506739" />

    <com.zhy.autolayout.AutoLinearLayout style="@style/SendPasswordActivity_tip_bg">
        <CheckBox
            android:id="@id/cb_tip"
            style="@style/CreateKeyPassword_cb_tip" />

        <TextView
            android:text="@string/confirm_tip_text"
            style="@style/SendPasswordActivity_tip_tv" />

    </com.zhy.autolayout.AutoLinearLayout>

</com.zhy.autolayout.AutoLinearLayout>
