<?xml version="1.0" encoding="utf-8"?>
<com.zhy.autolayout.AutoLinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/CreateKeyPassword_bg">

    <com.qmuiteam.qmui.widget.QMUITopBar
        android:id="@id/topbar"
        style="@style/topBar" />

    <include layout="@layout/createkeypassword_head" />

    <include layout="@layout/line_item" />

    <com.zhy.autolayout.AutoRelativeLayout style="@style/CreateKeyPassword_item_bg">

        <TextView
            android:id="@id/hezu"
            style="@style/createkeypassword_tv"
            android:text="@string/hezu_text" />

        <TextView
            style="@style/createkeypassword_tip_tv"
            android:layout_below="@id/hezu"
            android:text="@string/tip_hezu_text" />

        <CheckBox
            android:id="@id/cb_hezu"
            style="@style/create_password_checkbox" />
    </com.zhy.autolayout.AutoRelativeLayout>

    <include layout="@layout/line_item" />

    <com.zhy.autolayout.AutoRelativeLayout style="@style/CreateKeyPassword_item_bg">

        <TextView
            android:id="@id/safe"
            style="@style/createkeypassword_tv"
            android:text="@string/safe_text" />

        <TextView
            style="@style/createkeypassword_tip_tv"
            android:layout_below="@id/safe"
            android:text="@string/tip_safe_text" />

        <com.suke.widget.SwitchButton
            android:id="@id/switch_button"
            style="@style/create_password_switch_button"
            app:sb_checked_color="@color/color_green"
            app:sb_show_indicator="false" />
    </com.zhy.autolayout.AutoRelativeLayout>

    <include layout="@layout/line_item" />

    <com.zhy.autolayout.AutoLinearLayout style="@style/CreateKeyPassword_radio_btn_bg">

        <co.ceryle.radiorealbutton.RadioRealButtonGroup
            android:id="@id/rbg"
            style="@style/CreateKeyPassword_rb_bg">

            <co.ceryle.radiorealbutton.RadioRealButton
                android:id="@id/rb_day"
                style="@style/CreateKeyPassword_rb"
                app:rrb_checked="true"
                app:rrb_text="@string/day_text" />

            <co.ceryle.radiorealbutton.RadioRealButton
                android:id="@id/rb_hour"
                style="@style/CreateKeyPassword_rb"
                app:rrb_text="@string/hour_text" />
        </co.ceryle.radiorealbutton.RadioRealButtonGroup>

        <TextView
            android:id="@id/tv_time"
            style="@style/CreateKeyPassword_tv_time"
            android:text="@string/tv_time_text" />
    </com.zhy.autolayout.AutoLinearLayout>

    <include layout="@layout/line_item" />

    <com.zhy.autolayout.AutoRelativeLayout style="@style/match_parent">

        <com.zhy.autolayout.AutoRelativeLayout style="@style/CreateKeyPassword_bottom_bg">

            <CheckBox
                android:id="@id/cb_tip"
                style="@style/CreateKeyPassword_cb_tip" />

            <TextView
                android:id="@id/tv_tip"
                style="@style/CreateKeyPassword_tv_tip"
                android:text="@string/confirm_text" />

        </com.zhy.autolayout.AutoRelativeLayout>

        <com.zhy.autolayout.AutoLinearLayout
            android:layout_width="match_parent"
            android:layout_height="96px"
            android:layout_alignParentBottom="true"
            android:background="@color/color_green"
            >
            <Button
                android:id="@id/btn_confirm"
                android:text="@string/confirm_bind_text"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="?android:attr/selectableItemBackground"
                style="@style/main_btn_add_device" />
        </com.zhy.autolayout.AutoLinearLayout>
    </com.zhy.autolayout.AutoRelativeLayout>

</com.zhy.autolayout.AutoLinearLayout>