<?xml version="1.0" encoding="utf-8"?>
<com.zhy.autolayout.AutoLinearLayout
xmlns:android="http://schemas.android.com/apk/res/android"
style="@style/login_register_bg">

<!--返回-->
<ImageView
    android:id="@id/iv_back"
    style="@style/login_register_back_image"
    android:layout_marginTop="80.1px" />

<!--标题-->
<TextView
    style="@style/login_register_title"
    android:layout_marginTop="68.1px"
    android:text="注册" />

<!--输入框-->
<com.zhy.autolayout.AutoLinearLayout
    android:layout_height="352px"
    android:layout_marginTop="120px"
    style="@style/edit_bg">
    <!--昵称-->
    <com.idc9000.smartlock.view.ClearEditText
        android:id="@id/input_sign_name"
        style="@style/login_register_edit_name"
        android:hint="@string/name_text"
        android:paddingLeft="37px"
        android:paddingRight="40px" />
    <!--手机号-->
    <com.idc9000.smartlock.view.ClearEditText
        android:id="@id/input_sign_phone"
        style="@style/login_register_edit_phone"
        android:hint="@string/phone_text"
        android:paddingLeft="37px"
        android:paddingRight="40px" />

    <include layout="@layout/line_login_register" />

    <com.zhy.autolayout.AutoRelativeLayout
        android:layout_width="match_parent"
        android:layout_height="87px">
        <!--验证码-->
        <EditText
            android:id="@id/input_sign_code"
            android:hint="@string/sign_code_text"
            style="@style/register_edit_sign_code" />

        <!--倒计时按钮-->
        <com.idc9000.smartlock.view.CountDownButton
            android:id="@+id/btn_code"
            android:text="@string/sign_code_text"
            style="@style/register_countdown_btn" />
    </com.zhy.autolayout.AutoRelativeLayout>

    <include layout="@layout/line_login_register" />

    <!--密码-->
    <com.idc9000.smartlock.view.PasswdEditText
        android:id="@+id/input_sign_password"
        style="@style/login_register_edit_password"
        android:hint="@string/pw_text"
        android:paddingLeft="37px"
        android:paddingRight="40px" />

</com.zhy.autolayout.AutoLinearLayout>

<!--注册-->
<Button
    android:id="@id/btn_signup"
    style="@style/login_register_btn"
    android:text="@string/signup_text" />

<!--声明-->
<TextView
    android:id="@id/tv_tip"
    android:text="@string/signup_tip"
    style="@style/register_tip" />
</com.zhy.autolayout.AutoLinearLayout>