<?xml version="1.0" encoding="utf-8"?>
<com.zhy.autolayout.AutoLinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="455px"
    android:background="#F9F9F9"
    android:orientation="vertical">

    <com.zhy.autolayout.AutoLinearLayout
        style="@style/CreateKeyPassword_head_item_bg"
        android:layout_marginTop="24px">

        <TextView
            style="@style/CreateKeyPassword_head_item_tv"
            android:text="@string/tenant_phone_text" />

        <EditText
            android:id="@id/et_phone"
            style="@style/CreateKeyPassword_head_item_et"
            android:hint="@string/phone_text"
            android:inputType="phone"
            android:maxLength="11" />

    </com.zhy.autolayout.AutoLinearLayout>


    <com.zhy.autolayout.AutoLinearLayout
        style="@style/CreateKeyPassword_head_item_bg"
        android:layout_marginTop="19px">

        <TextView
            style="@style/CreateKeyPassword_head_item_tv"
            android:text="@string/open_door_pw_text" />

        <EditText
            android:id="@+id/et_password"
            style="@style/CreateKeyPassword_head_item_et"
            android:hint="@string/pw_hint_text"
            android:inputType="numberPassword"
            android:maxLength="8"
            android:maxLines="1" />

    </com.zhy.autolayout.AutoLinearLayout>


    <com.zhy.autolayout.AutoLinearLayout
        style="@style/CreateKeyPassword_head_item_bg"
        android:layout_marginTop="20px">

        <TextView
            style="@style/CreateKeyPassword_head_item_tv"
            android:text="@string/confirm_password_text" />

        <EditText
            android:id="@id/et_confirm_password"
            style="@style/CreateKeyPassword_head_item_et"
            android:hint="@string/confirm_password_text"
            android:inputType="numberPassword"
            android:maxLength="8"
            android:maxLines="1" />

    </com.zhy.autolayout.AutoLinearLayout>


    <com.zhy.autolayout.AutoLinearLayout
        style="@style/CreateKeyPassword_head_item_bg"
        android:layout_marginTop="20px">

        <TextView
            style="@style/CreateKeyPassword_head_item_tv"
            android:text="@string/input_the_rent_text" />

        <EditText
            android:id="@id/et_rent"
            style="@style/CreateKeyPassword_et_rent"
            android:paddingLeft="20dp"
            android:inputType="numberDecimal" />

        <com.jaredrummler.materialspinner.MaterialSpinner
            android:id="@id/time_spinner"
            style="@style/CreateKeyPassword_time_spinner" />

    </com.zhy.autolayout.AutoLinearLayout>

</com.zhy.autolayout.AutoLinearLayout>