<?xml version="1.0" encoding="utf-8"?>
<com.zhy.autolayout.AutoLinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/splash_bg"
    >

    <Button
        android:id="@+id/btn_login"
        style="@style/splash_button"
        android:layout_marginTop="509px"
        android:text="@string/login_text"
        />

    <TextView
        android:text="@string/or_text"
        android:textSize="28px"
        android:layout_marginTop="28px"
        android:layout_gravity="center"
        android:typeface="sans"
        android:textColor="@color/white"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/btn_signup"
        style="@style/splash_button"
        android:layout_marginTop="44px"
        android:text="@string/signup_text"
        />

</com.zhy.autolayout.AutoLinearLayout>